--- a/Tests/Controltest/MainWindow.xaml
+++ b/Tests/Controltest/MainWindow.xaml
@@ -62,7 +62,7 @@
         </controls:Drawer>
 
         <Button Content="Good" Click="Button_Click" controls:FloatingBlock.Content="Good" Foreground="Red" Margin="535,505,356,176"/>
-        <StackPanel controls:Growl.Token="InfoMessage" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,10" SizeChanged="StackPanel_SizeChanged"/>
+        <!--<StackPanel controls:Growl.Token="InfoMessage"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,10" SizeChanged="StackPanel_SizeChanged"/>-->
         <Slider Margin="140,610,696,121" TickFrequency="5" IsSnapToTickEnabled="True" Value="80" Maximum="100" Minimum="0"/>
         <controls:NumericUpDown Margin="1110,22,306,807" />
         <controls:ColorPicker Name="colorPicker" Margin="350,227,1413.333,385.667" Background="White"  />
