--- a/src/Hjmos.BaseControls/Themes/Styles/Base/RunningBlockBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/RunningBlockBaseStyle.xaml
@@ -1,19 +1,34 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../../Basic/Converters.xaml"/>
+        <ResourceDictionary Source="../../Basic/Converters.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    <Style TargetType="controls:RunningBlock" x:Key="RunningBlockBaseStyle">
-        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="Padding" Value="0,10"/>
+    <Style x:Key="RunningBlockBaseStyle" TargetType="controls:RunningBlock">
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="Padding" Value="0,10" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:RunningBlock">
-                    <controls:RunningBorder CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" Padding="{TemplateBinding Padding}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}">
+                    <controls:RunningBorder
+                        Padding="{TemplateBinding Padding}"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}">
                         <controls:SimplePanel ClipToBounds="True">
-                            <controls:SimplePanel HorizontalAlignment="Left" x:Name="PART_Panel"/>
+                            <controls:SimplePanel
+                                x:Name="PART_Panel"
+                                HorizontalAlignment="Left"
+                                RenderTransformOrigin="0.5,0.5">
+                                <controls:SimplePanel.RenderTransform>
+                                    <TransformGroup>
+                                        <TranslateTransform />
+                                    </TransformGroup>
+                                </controls:SimplePanel.RenderTransform>
+                            </controls:SimplePanel>
                         </controls:SimplePanel>
                     </controls:RunningBorder>
                 </ControlTemplate>
@@ -21,16 +36,16 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="Orientation" Value="Vertical">
-                <Setter Property="Padding" Value="10.0"/>
+                <Setter Property="Padding" Value="10.0" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
 
     <Style x:Key="RunningTextBlock" TargetType="TextBlock">
-        <Setter Property="RenderTransformOrigin" Value="0.5,0.5"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Background" Value="Transparent" />
     </Style>
 </ResourceDictionary>
