--- a/src/Hjmos.BaseControls/Themes/Styles/TextBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/TextBox.xaml
@@ -1,12 +1,20 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Base/TextBoxBaseStyle.xaml"/>
+        <ResourceDictionary Source="Base/TextBoxBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="controls:WatermarkTextBox" BasedOn="{StaticResource WatermarkTextBoxBaseStyle}"/>
-    <Style TargetType="TextBox" BasedOn="{StaticResource TextBoxBaseStyle}"/>
-    <Style x:Key="TextBoxExtend" BasedOn="{StaticResource TextBoxExtendBaseStyle}" TargetType="TextBox"/>
-    <Style TargetType="controls:TextBox" BasedOn="{StaticResource TextBoxPlusIcon}"/>
+    <Style BasedOn="{StaticResource WatermarkTextBoxBaseStyle}" TargetType="controls:WatermarkTextBox" />
+    <Style BasedOn="{StaticResource TextBoxBaseStyle}" TargetType="TextBox" />
+    <Style
+        x:Key="TextBoxExtend"
+        BasedOn="{StaticResource TextBoxExtendBaseStyle}"
+        TargetType="TextBox" />
+    <Style
+        x:Key="TextBoxPlusIcon"
+        BasedOn="{StaticResource TextBoxPlusIcon}"
+        TargetType="controls:TextBox" />
+    <Style BasedOn="{StaticResource TextBoxPlusBaseStyle}" TargetType="controls:TextBox" />
 </ResourceDictionary>
