--- a/Tests/Controltest/Window1.xaml
+++ b/Tests/Controltest/Window1.xaml
@@ -1,14 +1,30 @@
-﻿<Window x:Class="Controltest.Window1"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Controltest"
-        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        mc:Ignorable="d" Background="Black"
-        Title="Window1" Height="450" Width="800">
+﻿<Window
+    x:Class="Controltest.Window1"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
+    xmlns:local="clr-namespace:Controltest"
+    xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Window1"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
-        <local:UserControl2/>
+        <!--<hj:DashedBorder
+            Width="100"
+            Height="100"
+            Background="{Binding PreviewBrush}"
+            BorderThickness="1"
+            CornerRadius="5" />-->
+        <!--<hj:ImageButton Width="100" Height="100"  FileName="D:\\Users\\90462\\Desktop\\20200509094055.png">
+
+        </hj:ImageButton>-->
+
+        <hj:ImageViewerPlus  Width="600" Height="330"  ShowImgMap="True" ImageSource="D:\\Users\\90462\\Desktop\\2021-2-4-3-54-45.759.png"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="30,190,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <!--<local:UserControl2/>-->
         <!--<local:UserControl1 HorizontalAlignment="Left" Height="235" Margin="150,120,0,0" VerticalAlignment="Top" Width="415"/>-->
 
     </Grid>
