--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -1,28 +1,31 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converter="clr-namespace:Hjmos.BaseControls.Tools.Converter">
-    <converter:Object2VisibilityConverter x:Key="Object2VisibilityConverter"/>
-    <converter:CornerRadiusSplitConverter x:Key="CornerRadiusSplitConverter"/>
-    <BooleanToVisibilityConverter x:Key="Boolean2VisibilityConverter"/>
-    <converter:String2VisibilityReConverter x:Key="String2VisibilityReConverter"/>
-    <converter:Color2HexStringConverter x:Key="Color2HexStringConverter"/>
-    <converter:String2VisibilityConverter x:Key="String2VisibilityConverter"/>
-    <converter:Double2GridLengthConverter x:Key="Double2GridLengthConverter"/>
-    <converter:Boolean2VisibilityReConverter x:Key="Boolean2VisibilityReConverter"/>
-    <converter:IsFirstOrLastInContainerConverter x:Key="IsFirstOrLastInContainerConverter"/>
-    <converter:Number2PercentageConverter x:Key="Number2PercentageConverter"/>
-    <converter:Number2PercentageProConverter x:Key="Number2PercentageProConverter"/>
-    <converter:BorderClipConverter x:Key="BorderClipConverter"/>
-    <converter:BorderCircularClipConverter x:Key="BorderCircularClipConverter"/>
-    <converter:Text2ForegroundConverter x:Key="Text2ForegroundConverter"/>
-    <converter:Double2StrConverter x:Key="Double2StrConverter"/>
-    <converter:DoubleMinConverter x:Key="DoubleMinConverter"/>
-    <converter:Object2StringConverter x:Key="Object2StringConverter"/>
-    <converter:Name2ImageSourceConverter  x:Key="Name2ImageSourceConverter"/>
-    <converter:String2GeometryConverter x:Key="String2GeometryConverter"/>
-    <converter:RectangleCircularConverter x:Key="RectangleCircularConverter"/>
-    <converter:HearderSelectAllVisibilityConverter x:Key="HearderSelectAllVisibilityConverter"/>
-    <converter:BorderCircularConverter x:Key="BorderCircularConverter"/>
-    <converter:String2BrushConverter x:Key="String2BrushConverter"/>
-    <converter:TreeViewItemMarginConverter x:Key="TreeViewItemMarginConverter"/>
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converter="clr-namespace:Hjmos.BaseControls.Tools.Converter">
+    <converter:Object2VisibilityConverter x:Key="Object2VisibilityConverter" />
+    <converter:CornerRadiusSplitConverter x:Key="CornerRadiusSplitConverter" />
+    <BooleanToVisibilityConverter x:Key="Boolean2VisibilityConverter" />
+    <converter:String2VisibilityReConverter x:Key="String2VisibilityReConverter" />
+    <converter:Color2HexStringConverter x:Key="Color2HexStringConverter" />
+    <converter:String2VisibilityConverter x:Key="String2VisibilityConverter" />
+    <converter:Double2GridLengthConverter x:Key="Double2GridLengthConverter" />
+    <converter:Boolean2VisibilityReConverter x:Key="Boolean2VisibilityReConverter" />
+    <converter:IsFirstOrLastInContainerConverter x:Key="IsFirstOrLastInContainerConverter" />
+    <converter:Number2PercentageConverter x:Key="Number2PercentageConverter" />
+    <converter:Number2PercentageProConverter x:Key="Number2PercentageProConverter" />
+    <converter:BorderClipConverter x:Key="BorderClipConverter" />
+    <converter:BorderCircularClipConverter x:Key="BorderCircularClipConverter" />
+    <converter:Text2ForegroundConverter x:Key="Text2ForegroundConverter" />
+    <converter:Double2StrConverter x:Key="Double2StrConverter" />
+    <converter:DoubleMinConverter x:Key="DoubleMinConverter" />
+    <converter:Object2StringConverter x:Key="Object2StringConverter" />
+    <converter:Name2ImageSourceConverter x:Key="Name2ImageSourceConverter" />
+    <converter:String2GeometryConverter x:Key="String2GeometryConverter" />
+    <converter:RectangleCircularConverter x:Key="RectangleCircularConverter" />
+    <converter:HearderSelectAllVisibilityConverter x:Key="HearderSelectAllVisibilityConverter" />
+    <converter:BorderCircularConverter x:Key="BorderCircularConverter" />
+    <converter:String2BrushConverter x:Key="String2BrushConverter" />
+    <converter:TreeViewItemMarginConverter x:Key="TreeViewItemMarginConverter" />
+    <converter:BooleanArr2VisibilityConverter x:Key="BooleanArr2VisibilityConverter" />
+    <converter:Long2FileSizeConverter x:Key="Long2FileSizeConverter" />
 </ResourceDictionary>
