--- a/src/Hjmos.BaseControls/Themes/Styles/Button.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Button.xaml
@@ -27,6 +27,7 @@
     <Style x:Key="ButtonIcon" BasedOn="{StaticResource ButtonBaseStyle}" TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="controls:BorderElement.CornerRadius" Value="0"/>
         <Setter Property="Template">
