--- a/src/Hjmos.BaseControls/Themes/Styles/ImageViewer.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ImageViewer.xaml
@@ -1,15 +1,200 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls"
+    xmlns:interactivity="clr-namespace:Hjmos.BaseControls.Interactivity">
 
-    <Style TargetType="controls:ImageViewer">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Button.xaml" />
+        <ResourceDictionary Source="TextBlock.xaml" />
+        <ResourceDictionary Source="Border.xaml" />
+        <ResourceDictionary Source="ToggleButton.xaml" />
+        <ResourceDictionary Source="../Basic/Converters.xaml" />
+        <ResourceDictionary Source="../Basic/Paths.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
+    <Style TargetType="hj:ImageViewer">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="controls:ImageViewer">
-                    <Border x:Name="PART_Border" CornerRadius="360" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}"  SnapsToDevicePixels="True"/>
+                <ControlTemplate TargetType="hj:ImageViewer">
+                    <Border
+                        x:Name="PART_Border"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="360"
+                        SnapsToDevicePixels="True" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    
+
+
+
+    <Style TargetType="hj:ImageViewerPlus">
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="MinWidth" Value="400" />
+        <Setter Property="MinHeight" Value="250" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="hj:ImageViewerPlus">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <hj:SimplePanel
+                                x:Name="PART_PanelMain"
+                                Grid.RowSpan="2"
+                                ClipToBounds="True">
+                                <Border
+                                    Width="{TemplateBinding ImageWidth}"
+                                    Height="{TemplateBinding ImageHeight}"
+                                    Margin="{TemplateBinding ImageMargin}"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Top">
+                                    <Image
+                                        Name="PART_ImageMain"
+                                        RenderOptions.BitmapScalingMode="NearestNeighbor"
+                                        RenderTransformOrigin="0.5,0.5"
+                                        Source="{TemplateBinding ImageSource}" />
+                                </Border>
+                            </hj:SimplePanel>
+                            <Border
+                                Grid.Row="0"
+                                Grid.RowSpan="2"
+                                Width="252"
+                                Height="162"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom"
+                                Background="{DynamicResource DarkOpacityBrush}"
+                                BorderBrush="{DynamicResource BorderBrush}"
+                                BorderThickness="1">
+                                <Border.Visibility>
+                                    <MultiBinding Converter="{StaticResource BooleanArr2VisibilityConverter}">
+                                        <Binding Path="ShowSmallImgInternal" RelativeSource="{RelativeSource TemplatedParent}" />
+                                        <Binding Path="ShowImgMap" RelativeSource="{RelativeSource TemplatedParent}" />
+                                    </MultiBinding>
+                                </Border.Visibility>
+                                <Canvas
+                                    Name="PART_CanvasSmallImg"
+                                    MaxWidth="250"
+                                    MaxHeight="160"
+                                    ClipToBounds="True">
+                                    <Border
+                                        Name="PART_BorderMove"
+                                        Width="50"
+                                        Height="70"
+                                        Background="Transparent"
+                                        BorderBrush="Black"
+                                        BorderThickness="1"
+                                        UseLayoutRounding="True">
+                                        <Border BorderBrush="White" BorderThickness="1" />
+                                    </Border>
+                                </Canvas>
+                            </Border>
+                            <Border
+                                Name="PART_BorderBottom"
+                                Grid.Row="1"
+                                Height="30"
+                                HorizontalAlignment="Center"
+                                Background="{DynamicResource DarkOpacityBrush}"
+                                CornerRadius="4,4,0,0"
+                                Opacity="0"
+                                UseLayoutRounding="True">
+                                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                                    <Button
+                                        Margin="6,0"
+                                        Padding="3"
+                                        hj:IconElement.Geometry="{StaticResource SaveGeometry}"
+                                        Command="interactivity:ControlCommands.Save"
+                                        Style="{StaticResource ButtonIcon}" />
+
+                                    <Button
+                                        Margin="6,0"
+                                        Padding="3"
+                                        hj:IconElement.Geometry="{StaticResource WindowsGeometry}"
+                                        Command="interactivity:ControlCommands.Open"
+                                        Style="{StaticResource ButtonIcon}"
+                                        Visibility="Collapsed" />
+
+                                    <Border
+                                        Margin="10,2"
+                                        Background="White"
+                                        Style="{StaticResource BorderVerticallySplitter}" />
+
+                                    <Button
+                                        Margin="6,0"
+                                        Padding="3"
+                                        hj:IconElement.Geometry="{StaticResource ReduceGeometry}"
+                                        Command="interactivity:ControlCommands.Reduce"
+                                        Style="{StaticResource ButtonIcon}" />
+                                    <TextBlock
+                                        Margin="6,0"
+                                        Foreground="{DynamicResource TextIconBrush}"
+                                        Style="{StaticResource TextBlockSubTitle}"
+                                        Text="{TemplateBinding ScaleStr}" />
+                                    <Button
+                                        Margin="6,0"
+                                        Padding="3"
+                                        hj:IconElement.Geometry="{StaticResource EnlargeGeometry}"
+                                        Command="interactivity:ControlCommands.Enlarge"
+                                        Style="{StaticResource ButtonIcon}" />
+                                    <Button
+                                        Margin="6,0"
+                                        Background="Transparent"
+                                        Command="interactivity:ControlCommands.Restore"
+                                        Foreground="White"
+                                        Style="{StaticResource ButtonCustom}">
+                                        <Border
+                                            Padding="2"
+                                            BorderBrush="White"
+                                            BorderThickness="1">
+                                            <TextBlock Text="1:1" Foreground="White" />
+                                        </Border>
+                                    </Button>
+                                    <Border
+                                        Margin="10,2"
+                                        Background="White"
+                                        Style="{StaticResource BorderVerticallySplitter}" />
+                                    <Button
+                                        Margin="6,0"
+                                        Padding="3"
+                                        hj:IconElement.Geometry="{StaticResource RotateLeftGeometry}"
+                                        Command="interactivity:ControlCommands.RotateLeft"
+                                        CommandParameter=""
+                                        Style="{StaticResource ButtonIcon}" />
+                                    <Button
+                                        Margin="6,0,0,0"
+                                        Padding="3"
+                                        hj:IconElement.Geometry="{StaticResource RotateRightGeometry}"
+                                        Command="interactivity:ControlCommands.RotateRight"
+                                        Style="{StaticResource ButtonIcon}" />
+                                    <ToggleButton
+                                        Margin="12,0,6,0"
+                                        Padding="3"
+                                        hj:IconSwitchElement.Geometry="{StaticResource FullScreenGeometry}"
+                                        hj:IconSwitchElement.GeometrySelected="{StaticResource FullScreenReturnGeometry}"
+                                        Foreground="{DynamicResource TextIconBrush}"
+                                        IsChecked="{Binding IsFullScreen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                                        Style="{StaticResource ToggleButtonIconTransparent}"
+                                        Visibility="{TemplateBinding ShowFullScreenButton,
+                                                                     Converter={StaticResource Boolean2VisibilityConverter}}" />
+
+                                </StackPanel>
+                            </Border>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
