--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -45,5 +45,6 @@
         <ResourceDictionary Source="TreeView.xaml" />
         <ResourceDictionary Source="ContentComboBox.xaml" />
         <ResourceDictionary Source="ImageSelector.xaml" />
+        <ResourceDictionary Source="Window.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
